wx-core/include/generated/ffi_w.h

wxWindow *wxWindow_new();
wxWindow *wxWindow_new1(wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
bool wxWindow_Create(wxWindow * self, wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
// CLASS: wxWrapSizer
wxClassInfo *wxWrapSizer_CLASSINFO();
wxWrapSizer *wxWrapSizer_new(int orient, int flags);